--- a/apps/hono-app/package.json
+++ b/apps/hono-app/package.json
@@ -1,12 +1,15 @@
 {
-  "scripts": {
-    "dev": "tsx watch src/index.ts"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.3.5",
-    "hono": "^3.12.3"
-  },
-  "devDependencies": {
-    "tsx": "^3.12.2"
-  }
+	"name": "hono-app",
+	"version": "0.0.1",
+	"description": "",
+	"scripts": {
+		"dev": "tsx watch src/index.ts"
+	},
+	"dependencies": {
+		"@hono/node-server": "^1.3.5",
+		"hono": "^3.12.3"
+	},
+	"devDependencies": {
+		"tsx": "^3.12.2"
+	}
 }
