--- a/apps/hono-app/package.json
+++ b/apps/hono-app/package.json
@@ -3,13 +3,15 @@
 	"version": "0.0.1",
 	"description": "",
 	"scripts": {
-		"dev": "tsx watch src/index.ts"
+		"dev": "tsx watch src/index.ts",
+		"lint": "pnpm dlx @biomejs/biome check --apply ./src"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.3.5",
 		"hono": "^3.12.3"
 	},
 	"devDependencies": {
-		"tsx": "^3.12.2"
+		"tsx": "^3.12.2",
+		"@repo/biome-config": "workspace:*"
 	}
 }
