📦 chore(biome.json): add biome.json configuration file 📦 chore(package.json): remove @repo/biome-config dependency 📦 chore(package.json): add @biomejs/biome dependency to devDependencies 📦 chore(biome.json): add biome.json configuration file 📦 chore(package.json): remove @repo/biome-config dependency 📦 chore(package.json): add @biomejs/biome dependency to devDependencies 📦 chore(biome.json): add biome.json configuration file 📦 chore(package.json): remove @repo/biome-config dependency 📦 chore(package.json): add @biomejs/biome dependency to devDependencies 📦 chore(biome.json): add biome.json configuration file 📦 chore(package.json): remove @repo/biome-config dependency 📦 chore(package.json): add @biomejs

--- a/apps/remix-app/package.json
+++ b/apps/remix-app/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "remix build",
 		"dev": "remix dev --manual",
-		"lint": "pnpm dlx @biomejs/biome check --apply ./app",
+		"lint": "pnpm dlx @biomejs/biome check --apply ./",
 		"start": "remix-serve ./build/index.js",
 		"typecheck": "tsc"
 	},
@@ -21,7 +21,7 @@
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^2.5.0",
-		"@repo/biome-config": "workspace:*",
+		"@biomejs/biome": "1.5.1",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
 		"typescript": "^5.1.6"
