--- a/apps/vite-app/package.json
+++ b/apps/vite-app/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "pnpm dlx @biomejs/biome check --apply ./app",
+		"lint": "pnpm dlx @biomejs/biome check --apply ./",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -17,7 +17,7 @@
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@vitejs/plugin-react": "^4.2.1",
-		"@repo/biome-config": "workspace:*",
+		"@biomejs/biome": "1.5.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8"
 	}
