--- a/apps/hono-app/package.json
+++ b/apps/hono-app/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
-		"lint": "pnpm dlx @biomejs/biome check --apply ./src"
+		"lint": "pnpm dlx @biomejs/biome check --apply ./"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.3.5",
@@ -12,6 +12,6 @@
 	},
 	"devDependencies": {
 		"tsx": "^3.12.2",
-		"@repo/biome-config": "workspace:*"
+		"@biomejs/biome": "1.5.1"
 	}
 }
