--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -11,7 +11,7 @@
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
-		"lint": "pnpm dlx @biomejs/biome check --apply ./src",
+		"lint": "pnpm dlx @biomejs/biome check --apply ./",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
@@ -41,8 +41,8 @@
 		"ts-loader": "^9.4.3",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.1.3",
-		"@repo/biome-config": "workspace:*"
+		"@biomejs/biome": "1.5.1",
+		"typescript": "^5.1.3"
 	},
 	"jest": {
 		"moduleFileExtensions": ["js", "json", "ts"],
