--- a/apps/nextjs-app/package.json
+++ b/apps/nextjs-app/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "pnpm dlx @biomejs/biome check --apply ./app"
+		"lint": "pnpm dlx @biomejs/biome check --apply ./"
 	},
 	"dependencies": {
 		"next": "^14.0.4",
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
-		"@repo/biome-config": "workspace:*",
+		"@biomejs/biome": "1.5.1",
 		"@types/node": "^20.10.6",
 		"@types/react": "^18.2.46",
 		"@types/react-dom": "^18.2.18",
