--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
 		"format": "pnpm dlx @biomejs/biome format --write ."
 	},
 	"devDependencies": {
-		"@repo/typescript-config": "workspace:*",
 		"@biomejs/biome": "1.5.1",
+		"@repo/typescript-config": "workspace:*",
+		"lefthook": "^1.5.6",
 		"turbo": "latest"
 	},
 	"packageManager": "pnpm@8.9.0",
