🔧 chore(settings.json): update editor.defaultFormatter for [json] to biomejs.biome 🔧 chore(biome.json): disable noNonNullAssertion rule in linter style rules 🔧 chore(biome.json): change noParameterAssign rule severity to warn 🔧 chore(biome.json): add useButtonType rule in a11y rules with severity warn

--- a/apps/vite-app/biome.json
+++ b/apps/vite-app/biome.json
@@ -1,11 +1,9 @@
 {
 	"extends": ["../../biome.json"],
 	"linter": {
-		"enabled": true,
 		"rules": {
-			"recommended": true,
 			"style": {
-				"noParameterAssign": "off"
+				"noNonNullAssertion": "off"
 			}
 		}
 	}
